--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -432,7 +432,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subrsa-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-8-29" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-8-30" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing RSA algorithm implementations for conformance to  " />
   <meta name="description" content="This document defines the JSON schema for testing RSA algorithm implementations for conformance to  " />
 
@@ -453,10 +453,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">August 29, 2016</td>
+  <td class="right">August 30, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: March 2, 2017</td>
+  <td class="left">Expires: March 3, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -477,7 +477,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on March 2, 2017.</p>
+<p>This Internet-Draft will expire on March 3, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1141,11 +1141,12 @@
 </table>
 <p id="rfc.section.2.3.4.p.7">Note: the salt length for each hash algorithm used in PKCS1PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.</p>
 <h1 id="rfc.section.2.3.5"><a href="#rfc.section.2.3.5">2.3.5.</a> <a href="#mode_componentSigPrimitive" id="mode_componentSigPrimitive">The componentSigPrimitive Mode Capabilities</a></h1>
-<p id="rfc.section.2.3.5.p.1">The RSA componentSigPrimitive mode capability is advertised a JSON object within the array of 'modeSpecs' value of the ACVP registration message. as part of the 'capability_exchange' element of the ACVP JSON registration message. In this mode, the only tested capability is the correct expontiation s = msg^d mod n, where msg is a message, d is the private exponent and n is the modulus, all supplied by the testing ACVP server. Only 2048-bit RSA keys are allowed for this capability.  There are no properties specified for this mode.  See the ACVP specification for details on the registration message.</p>
+<p id="rfc.section.2.3.5.p.1">The RSA componentSigPrimitive mode capability is advertised a JSON object within the array of 'modeSpecs' value of the ACVP registration message. as part of the 'capability_exchange' element of the ACVP JSON registration message. In this mode, the only tested capability is the correct expontiation s = msg^d mod n, where msg is a message, d is the private exponent and n is the modulus, all supplied by the testing ACVP server. Only 2048-bit RSA keys are allowed for this capability.  There are no properties specified for this capability. See Section <a href="#app-testcomponentsigprimitive-ex">Appendix B.5</a> for additional details on constraints for msg and n.  See the ACVP specification for details on the registration message.</p>
 <p id="rfc.section.2.3.5.p.2">Each RSA componentSigPrimitive mode capability is advertised as a self-contained JSON object.</p>
 <h1 id="rfc.section.2.3.6"><a href="#rfc.section.2.3.6">2.3.6.</a> <a href="#mode_componentDecPrimitive" id="mode_componentDecPrimitive">The componentDecPrimitive Mode Capabilities</a></h1>
-<p id="rfc.section.2.3.6.p.1">The RSA componentDecPrimitive mode capability is advertised a JSON object within the array of 'modeSpecs' value of the ACVP registration message. as part of the 'capability_exchange' element of the ACVP JSON registration message. In this mode, the only tested capability is the correct expontiation s = msg^d mod n, where msg is a message, d is the private exponent and n is the modulus, all supplied by the testing ACVP server.  Only 2048-bit RSA keys are allowed for this capability. There are no properties specified for this mode.  See <a href="#SP800-56B">[SP800-56B]</a>, Section 7.1.2 for details.  See the ACVP specification for details on the registration message.</p>
-<p id="rfc.section.2.3.6.p.2">Each RSA componentDecPrimitive mode capability is advertised as a self-contained JSON object.</p>
+<p id="rfc.section.2.3.6.p.1">The RSA componentDecPrimitive mode capability is advertised a JSON object within the array of 'modeSpecs' value of the ACVP registration message. as part of the 'capability_exchange' element of the ACVP JSON registration message. In this mode, the only tested capability is the correct expontiation s = msg^d mod n, where msg is a message, d is the private exponent and n is the modulus. See <a href="#SP800-56B">[SP800-56B]</a>, Section 7.1.2 for details.</p>
+<p id="rfc.section.2.3.6.p.2">In testing, only msg is supplied by the ACVP server.  The client is responsible for generating RSA key pairs of modulus n, private key d, and calculates s.  Only 2048-bit RSA keys are allowed for this capability. See <a href="#app-testcomponentdecprimitive-ex">Appendix B.6</a> for additional details on constraints for msg and n. The client provides the public exponent e, modulus n, the private key d and the computed result s in its response to the ACVP - see <a href="#app-componentdec-results-ex">Appendix C.6</a> .  There are no properties specified for this capability.  See the ACVP specification for details on the registration message.</p>
+<p id="rfc.section.2.3.6.p.3">Each RSA componentDecPrimitive mode capability is advertised as a self-contained JSON object.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual algorithm, such as Hash_DRBG, etc.  This section describes the JSON schema for a test vector set used with DRBG algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
@@ -2302,7 +2303,7 @@
        ]
 }
 </pre>
-<p id="rfc.section.B.3.p.1">Note: The ACVP server does retain additional context for each test vector sent to the client in order to verify the results when submitted for validation. These may include the public key n, the public exponent e, the private key d for each test.</p>
+<p id="rfc.section.B.3.p.1">Note: The ACVP server does retain additional context for each test vector sent to the client in order to verify the results when submitted for validation.  These may include the public key n, the public exponent e, the private key d for each test. Note also that each test for which msg is not between 0 and n -1 should fail.</p>
 <h1 id="rfc.appendix.B.4"><a href="#rfc.appendix.B.4">B.4.</a> <a href="#app-testVectlegacySigVer-ex" id="app-testVectlegacySigVer-ex">Example Test Vectors for legacySigVer JSON Objects</a></h1>
 <p id="rfc.section.B.4.p.1">The format and structure of legacySigVer Test Vector JSON Objects is identical to those for the Test Vectors for sigVer JSON Objects. </p>
 <h1 id="rfc.appendix.B.5"><a href="#rfc.appendix.B.5">B.5.</a> <a href="#app-testcomponentsigprimitive-ex" id="app-testcomponentsigprimitive-ex">Example Test Vectors for componentSigPrimitive JSON Objects</a></h1>
